tests/baselines/reference/cannotIndexError.errors.txt
cannotIndexError.ts(4,5): error TS2860: Type 'string' cannot be used to index type 'T', because type 'T' is generic and an index signature of a constraint of a generic type can only be used for reading.
cannotIndexError.ts(4,5): error TS2860: Type 'symbol' cannot be used to index type 'T', because type 'T' is generic and an index signature of a constraint of a generic type can only be used for reading.


==== cannotIndexError.ts (2 errors) ====
    // From #47357
    
    function foo<T extends Record<string | symbol, any>>(target: T, p: string | symbol) {
        target[p] = "";
        ~~~~~~~~~
!!! error TS2860: Type 'string' cannot be used to index type 'T', because type 'T' is generic and an index signature of a constraint of a generic type can only be used for reading.
        ~~~~~~~~~
!!! error TS2860: Type 'symbol' cannot be used to index type 'T', because type 'T' is generic and an index signature of a constraint of a generic type can only be used for reading.
    }